-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.288 2008-05-12 20:31:30 guru Exp $
-----------------------------------------------------------------------------------------
2005-05-12	pwessel
	* mgg/*.c:		Had a mix of GMT_fopen and fread which fails with a Windows DLL

2005-05-09	remko
	* gmt_support.c:	Allow a little more slop in determining whether primary tick
				is at same location as secondary tick.

2008-05-08	pwessel
	* grd2xyz.c:		For -E: The test for dx == dy was susceptible to round-off
	
2008-05-07	remko
	* gmt_io.c (GMT_nc_input):	Would not read all columns when no variable names given.

2008-05-06	pwessel
	* gmtselect.c:		Did not like a variable number of columns.  Now OK if ASCII
				i/o and at least 2 (3 with -Z) columns are found.
	* gmt_mgg2_header.c:	Passed 2nd, 3rd arguments to fread in the wrong order, thus
				failed to read GRD98 grids.
	* gmt_init.c:		Now, media size Custom_WxH can use W and H in inch, cm, or m
				by appending i, c, or m to each dimension.

2008-05-05	pwessel
	* psxyz.c:		Memory problem: Since realloc does not initialize we
				must explicitly set any pointers in the structure to NULL
				since we later use the pointer to determine if we need to
				free memory.
	* project.c:		Same.

2008-05-03	pwessel
	* psxy.c:		The -D option erroneously gave error when used properly.

-----------------------------------------------------------------------------------------
2008-05-01
	* tar 4.3.0 made and released via email
-----------------------------------------------------------------------------------------

2008-05-01	pwessel
	* gmt_map.c:		GMT_grd_project did not check if x_proj was NaN before trying
				to add/sub 360 degrees, hanging under Windows.
				
2008-05-01	remko
	* ps2raster.c:		When encountering BoundingBox: (atend), skip to the end.
	* grdsample.c:		Did not allocate enough memory, with crashes resulting.